--- a/Senha.ipynb
+++ b/Senha.ipynb
@@ -39,21 +39,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z0fypCuyIYOt",
-        "outputId": "72f828e1-bdeb-4b55-bb45-e0d40dd30a21"
+        "outputId": "7c1d0714-e181-43b3-c4a6-ead8313b98af"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Informe o tamanho da senha: 8\n",
-            "Sua senha é #Yg4tymA\n"
+            "Informe o tamanho da senha: 12\n",
+            "Sua senha é YZ%45g#HutLx\n"
           ]
         }
       ],
